proj/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: equipo-1-8
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: equipo-1-8
  replicas: 1
  template:
    metadata:
      labels:
         app: equipo-1-8
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: equipo-1-8
           image: localhost:5000/equipo-1-8:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: equipo-1-8
  namespace: thymeleaf
spec:
#  type: NodePort
  selector:
    app: equipo-1-8
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
